--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-hyperlink": "0.0.19",
     "react-native-vector-icons": "^6.6.0",
     "uuidv4": "^6.0.8"
   },
