--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-global-props": "^1.1.5",
     "react-native-hyperlink": "0.0.19",
     "react-native-vector-icons": "^6.6.0",
+    "react-router-native": "^5.2.0",
     "uuidv4": "^6.0.8"
   },
   "devDependencies": {
