--- a/frontend/ios/trivialFrontend/Info.plist
+++ b/frontend/ios/trivialFrontend/Info.plist
@@ -54,6 +54,12 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>UIAppFonts</key>
-	<array/>
+	<array>
+		<string>ChelseaMarket-Regular.ttf</string>
+		<string>NotoSerif-Bold.ttf</string>
+		<string>NotoSerif-BoldItalic.ttf</string>
+		<string>NotoSerif-Italic.ttf</string>
+		<string>NotoSerif-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
