--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.0",
+    "react-native-emoji": "^1.8.0",
     "react-native-global-props": "^1.1.5",
     "react-native-hyperlink": "0.0.19",
     "react-native-ratings": "^7.2.0",
@@ -38,5 +39,5 @@
     "assets": [
       "./assets/fonts/"
     ]
-  }  
+  }
 }
